--- a/views/administracion/listas/listaTipoUnidades.jade
+++ b/views/administracion/listas/listaTipoUnidades.jade
@@ -4,7 +4,7 @@ head
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     link(rel="stylesheet", href="/stylesheets/main.css")
     link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
-    title Pafina Pincipal
+    title Tipos de Unidad
 
   body
     header.header
