--- a/views/administracion/reportes/reporteCentrosCosto.jade
+++ b/views/administracion/reportes/reporteCentrosCosto.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
   head
     meta(charset='UTF-8')
-    title Centros de Costo
+    title Reporte Centros de Costo
     link(rel='stylesheet' href='/stylesheets/reportes/reportes.css')
   body
 
