--- a/views/administracion/reportes/reporteEmpresas.jade
+++ b/views/administracion/reportes/reporteEmpresas.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
   head
     meta(charset='UTF-8')
-    title Centros de Costo
+    title Reporte Empresas
     link(rel='stylesheet' href='/stylesheets/reportes/reporteEmpresas.css')
   body
 
