--- a/views/administracion/listas/listaFranquicias.jade
+++ b/views/administracion/listas/listaFranquicias.jade
@@ -75,7 +75,7 @@ head
       table
         thead      
           tr
-            th Id
+            //th Id
             th Nombre
             
             th Status
@@ -83,7 +83,7 @@ head
         tbody        
         each f in listaFranquicia      
           tr
-            td= f.idFranquicia  
+            //td= f.idFranquicia  
             td= f.nombreFranquicia 
             if f.status == true         
               td Activo     
