--- a/views/administracion/listas/listaTipoUnidades.jade
+++ b/views/administracion/listas/listaTipoUnidades.jade
@@ -75,14 +75,14 @@ head
       table
         thead      
           tr
-            th Id
+            //th Id
             th Nombre        
             th Status
             th Accion               
         tbody        
         each tu in listaTipoUnidad      
           tr
-            td= tu.IdTipoUnidad  
+            //td= tu.IdTipoUnidad  
             td= tu.nombreTipo 
             if tu.status == true         
               td Activo     
