--- a/views/administracion/reportes/reporteFranquicias.jade
+++ b/views/administracion/reportes/reporteFranquicias.jade
@@ -25,13 +25,13 @@ html(lang='es')
       table
         thead      
           tr
-            th Id
+            //th Id
             th Nombre            
             th Status            
         tbody        
         each f in listadoFranquicias      
           tr
-            td= f.idFranquicia  
+            //td= f.idFranquicia  
             td= f.nombreFranquicia 
             if f.status == true         
               td Activo     
