--- a/views/administracion/reportes/reporteTiposUnidad.jade
+++ b/views/administracion/reportes/reporteTiposUnidad.jade
@@ -25,14 +25,14 @@ html(lang='es')
       table
         thead      
           tr
-            th Id
+            //th Id
             th Nombre        
             th Status
           
         tbody        
         each tu in listaTipoUnidad      
           tr
-            td= tu.IdTipoUnidad  
+            //td= tu.IdTipoUnidad  
             td= tu.nombreTipo 
             if tu.status == true         
               td Activo     
