--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -402,6 +402,29 @@ table{
 	display: inline-block;
 	font-size: 16px;
 	border-radius: 5px;
+	width: 250px;
+	/*margin-left: 8px;*/
+
+	-webkit-transition-duration: 0.4s;
+
+	transition-duration: 0.4s;
+	font-weight: bold;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	cursor: pointer;
+	margin-top: 1%;
+}
+
+.bntNuevoLista{
+	background-color: #4CAF50;
+	border: none;
+	color: rgb(255, 255, 255);
+	padding: 7px 26px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 5px;
+	width: 250px;
 	/*margin-left: 8px;*/
 
 	-webkit-transition-duration: 0.4s;
