--- a/views/administracion/listas/listaEmpresas.jade
+++ b/views/administracion/listas/listaEmpresas.jade
@@ -69,6 +69,9 @@ head
     form.col-12(action="reporteEmpresas"  method='POST' name="Id")
       input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
       button(type="submit" class="btnReporte" ) Generar reporte
+    form.col-12(action="nuevaEmpresa"  method='POST' name="Id")
+      input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
+      button(type="submit" class="bntNuevoLista" ) Agregar Empresa
 
     br
     br
