--- a/views/miPerfil.jade
+++ b/views/miPerfil.jade
@@ -124,10 +124,10 @@ html(lang='es')
 .container3
   .row
     .input-group    
-      form(action="nuevoUsuario" method='POST')    
+      form(action="cambiarPass" method='POST')    
         if usuario.esAdministrador == true
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
-          input(type="submit", value="Nuevo" class ="brnNuevo")
+          input(type="submit", value="Cambiar Contraseña" class ="btnCancelar")
 
 
 
