--- a/views/administracion/listas/listaFranquicias.jade
+++ b/views/administracion/listas/listaFranquicias.jade
@@ -69,6 +69,9 @@ head
         input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
         button(type="submit" class="btnReporte" ) Generar reporte
 
+      form.col-12(action="nuevaFranquicia"  method='POST' name="Id")
+        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
+        button(type="submit" class="bntNuevoLista" ) Agregar Franquicia
       br
       br
 
