--- a/views/administracion/unosolo/verUnCentroCosto.jade
+++ b/views/administracion/unosolo/verUnCentroCosto.jade
@@ -221,3 +221,10 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
         form(action="nuevoCentroCosto" method='POST')    
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
           input(type="submit", value="Nuevo" class ="brnNuevo")
+.container3
+  .row
+    .input-group    
+      if usuario.esAdministrador == true 
+        form(action="verListaCentrosCosto" method='POST')    
+          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
+          input(type="submit", value="Cancelar" class ="btnCancelar")          
