--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -111,4 +111,10 @@ html(lang='es')
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")        
           input(type="submit", value="Nuevo" class ="brnNuevo")
  
- 
+.container3
+  .row
+    .input-group    
+      if usuario.esAdministrador == true 
+        form(action="verListaTipoUnidad" method='POST')    
+          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
+          input(type="submit", value="Cancelar" class ="btnCancelar")           
