--- a/views/cambiarPass.jade
+++ b/views/cambiarPass.jade
@@ -1,10 +1,9 @@
 doctype html
 html(lang='es')
   head
-      meta(charset='UTF-8')
-      title Franquicia
-      link(rel='stylesheet' href='/stylesheets/verUnaFranquicia.css')
-
+    meta(charset='UTF-8')
+    title Cambiar Contraseña
+    link(rel='stylesheet' href='/stylesheets/unCentroCosto.css')
   body
     header.header
       .container
@@ -56,57 +55,61 @@ html(lang='es')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Usuarios
   
-        label(for='btn-menu') ✖️ 
+        label(for='btn-menu') ✖️
+
+// .h3 Comienza tu prueba gratuita de 30 días ya mismo
+// p o puedes comprar tu plan en Softlife ahora mismo
 
 .container2
-    form(action="guardarFranquicia" method='POST')
-      if tipoMensaje == 1 
-        label(class="ok") Datos guardados correctamente
-      else  
-        if tipoMensaje == 2
-          label(class="lblError") Algo salio mal, los datos no se guardaron
-      input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-      input(type='hidden' value= franquicia.idFranquicia   name="IdFranquicia") 
-      h3 Informacion de Franquicia
-      .row
-        .col-half
-          h4 Nombre Franquicia
-            .input-group.input-group-icon
-              input(type="text", name = "nombreFranquicia", value = franquicia.nombreFranquicia , placeholder="Nombre franquicia")
-              .input-icon
-                i.fa.fa-user
-        .col-half
-          h4 Status
-          .input-group 
-            select(name = "status")
-              if franquicia.status == true
-                option(class="opt" value = '1') Activo
-                if usuario.esAdministrador == true
-                  option(class="opt" value ='0') Inactivo
-              else 
-                option(class="opt" value = '0') Inactivo 
-                if usuario.esAdministrador == true
-                  option(class="opt" value = '1') Activo
-              
-                    
-      .row
-        
-        .input-group
-          if usuario.esAdministrador == true
-            input(type="submit", value="Guardar" class="brnGuardar")
+  form(action="guardarNuevoPass" method='POST')
+    input(type='hidden' value= usuario.IdUsuario   name="idtemp")
+    input(type='hidden' value= usuario.IdUsuario   name="IdUsuarioVer") 
+    if tipoMensaje == 3
+      label(class="lblError") Las contraseñas no coinciden
+    if tipoMensaje == 1 
+      label(class="ok") Datos guardados correctamento
+    else  
+      if tipoMensaje == 2
+        label(class="lblError") Algo salio mal, los datos no se guardaron    
+    h3 Mi Informacion
+    .row
+      .col-half
+        h4 Nombre completo
+          .input-group.input-group-icon
+            input(type="text", name='nombreCompleto', readonly='readonly', value = usuario.nombreCompleto , placeholder="Nombre completo")
+            .input-icon
+              i.fa.fa-user
+          h4 Nueva Contraseña
+          .input-group.input-group-icon
+            input(type="password",name='pass' , value = usuario.username , placeholder="Nueva Contraseña")
+            .input-icon
+              i.fa.fa-envelope
+      .col-half
+        h4 Nombre Usuario
+        .input-group.input-group-icon
+          input(type="text", name='nombreUsuario', readonly='readonly' , value = usuario.username,  placeholder="Nombre Usuario")
+          .input-icon
+            i.fa.fa-key
+        h4 Confirmar Contraseña Nueva
+        .input-group.input-group-icon
+          input(type="password", name='confirmPass', value = '',  placeholder="Confirmar Contraseña Nueva")
+          .input-icon
+            i.fa.fa-key   
 
-.container3
-  .row 
-    .input-group
-      if usuario.esAdministrador == true
-        form(action="nuevaFranquicia" method='POST')    
-          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")        
-          input(type="submit", value="Nuevo" class ="brnNuevo")
+                           
+
+
+      .row
+        .input-group                                                
+          input(type="submit", value="Guardar" class ="brnGuardar")
 
 .container3
   .row
     .input-group    
-      if usuario.esAdministrador == true 
-        form(action="verListaFranquicias" method='POST')    
+      form(action="miPerfil" method='POST')    
+        if usuario.esAdministrador == true
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
-          input(type="submit", value="Cancelar" class ="btnCancelar")          
+          input(type="submit", value="Cancelar" class ="btnCancelar")
+
+
+
