--- a/views/administracion/reportes/reporteUsuarios.jade
+++ b/views/administracion/reportes/reporteUsuarios.jade
@@ -17,7 +17,7 @@ html(lang='es')
 
       br
       
-      label(class="lblTitulo" ) Franquicias en el Sistema
+      label(class="lblTitulo" ) Usuarios en el Sistema
 
       br
 
