--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -3,7 +3,7 @@ html(lang='es')
   head
     meta(charset='UTF-8')
     title Tipo Unidad
-    link(rel='stylesheet' href='/stylesheets/verUnTIpo.css')
+    link(rel='stylesheet' href='/stylesheets/verUnTipo.css')
   body
     header.header
       .container
